name:                battleships
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/battleships#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game, Board, BoardUtil, Cell, PlayerA, Value, Ship
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , QuickCheck
                     , MonadRandom
                     , random
                     , safe
                     , containers
  default-language:    Haskell2010

executable battleships-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , battleships
                     , QuickCheck
                     , random-shuffle
  default-language:    Haskell2010

test-suite battleships-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , battleships
                     , MonadRandom
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/battleships
